k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: maps10
  name: maps10
  namespace: maps10
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: maps10
