k8s/routeSpecial.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: maps10
  name: maps10-direct
  namespace: maps10
spec:
  host: thailand.asducode.fr
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: maps10
    weight: 100
  wildcardPolicy: None
